syntax = "proto3";

package gbuddy;

option java_package = "com.example.gym.buddies.data.protos";
option java_outer_classname = "LoginSignupProto";

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string userName = 1;
  string emailId = 2;
  string mobileNo = 3;
  int32 picId = 4;
  int32 userId = 5;
  bytes userImage = 20;
  string about = 21;
  int32 responseCode = 6;
  string responseMessage = 22;
}

message SignupRequest {
  string userName = 1;
  string emailId = 2;
  string mobileNo = 3;
  string password = 4;
  RoleType roles = 20; 
  string about = 21;
  bytes userImage = 22;
}

message SignupResponse {
  LoginResponse response = 1;
}

enum RoleType {
    APP_USER = 0;
    GYM_ADMIN = 1;
    APP_ADMIN = 2;
  }